feature: partner CRUD
